[package]
name = "relay-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "relay-server"
path = "src/main.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
zerocopy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
