[package]
name = "ws-bridge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ws-bridge"
path = "src/main.rs"

[dependencies]
alphapulse-protocol = { path = "../../protocol" }
zerocopy = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
metrics = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }