[package]
name = "config"
version = "0.2.0"
edition = "2021"
description = "Centralized configuration and constants for Torq services"
license = "UNLICENSED"

[dependencies]
# For configuration serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# For lazy static initialization
once_cell = "1.19"

# Collections are in std - no external crate needed

[dev-dependencies]
tempfile = "3.8"