[package]
name = "alphapulse-health-check"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
libc = "0.2"
