[package]
name = "alphapulse-message-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torq-network = { path = "../../network" }
alphapulse-types = { path = "../types" }
async-trait = "0.1"
futures-util = "0.3"
num_enum = "0.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tempfile = "3.8"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
