[package]
name = "alphapulse-mev"
version = "0.1.0"
edition = "2021"
authors = ["AlphaPulse Team"]

[dependencies]
protocol_v2 = { path = "../../protocol_v2" }
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"