[package]
name = "alphapulse-mev"
version = "0.1.0"
edition = "2021"
authors = ["AlphaPulse Team"]

[dependencies]
alphapulse-types = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.33"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
