[package]
name = "alphapulse-time"
version = "0.1.0"
edition = "2021"
authors = ["AlphaPulse Team"]
description = "High-performance timestamp utilities for AlphaPulse Protocol V2"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["time", "rt"] }
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "test-util"] }

[lib]
name = "alphapulse_time"
path = "src/lib.rs"